[package]
name = "homebound"
version = "0.1.0"
authors = ["Matthew J. Berger <matthewberger@nevada.unr.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
toml = "0.5.3"
termcolor = "1"